--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -103,7 +103,7 @@
                 alert('Registration successful!');
 
                 // 注册成功, 跳转到登录界面
-                window.location.href = '/login';
+                window.location.href = '/login.html';
             })
             .catch((error) => {
                 console.error('Error:', error);
