Show name when use login successfully

--- a/src/main/resources/static/singer_index.html
+++ b/src/main/resources/static/singer_index.html
@@ -4,13 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+
+        label {
+            font-weight: bold;
+            margin-bottom: 10px;
+            display: block;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        #output {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #666;
+        }
+    </style>
     <script src="./js/onload.js"></script>
 </head>
 
-<body onload="checkLog()">
+<body onload="getName(true)">
 <h1>Welcome to Singer Home</h1>
 
 <p id="output"></p> <!-- 用于显示歌手的名字 -->
 
+<form action="/submit" method="post">
+    <label for="song-name">请输入你想创建的歌曲名称:</label>
+    <input type="text" id="song-name" name="songName" placeholder="请输入歌曲名称" required>
+    <input type="submit" value="提交">
+</form>
 </body>
+
 </html>
