--- a/src/main/resources/static/user_index.html
+++ b/src/main/resources/static/user_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <script src="./js/onload.js"></script>
+    <script src="js/singer.js"></script>
 </head>
 
 <body onload="checkLog()">
