--- a/src/main/resources/static/user_index.html
+++ b/src/main/resources/static/user_index.html
@@ -4,13 +4,117 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <script src="js/singer.js"></script>
+    <style>
+        h1, #output {
+            margin: 20px 0;
+            text-align: center;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+        .container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .form-group textarea {
+            resize: vertical;
+            height: 80px;
+        }
+        .submit-btn {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+        .submit-btn:hover {
+            background-color: #0056b3;
+        }
+        .delete-btn {
+            width: 100%;
+            padding: 10px;
+            background-color: #dc3545;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .delete-btn:hover {
+            background-color: #c82333;
+        }
+    </style>
+    <script src="js/user.js"></script>
 </head>
 
-<body onload="checkLog()">
+<body onload="user_load()">
 <h1>Welcome to User Home</h1>
-
 <p id="output"></p> <!-- 用于显示用户的名字 -->
+
+<div class="container">
+    <h2>Create Playlist</h2>
+    <div class="form-group">
+        <label for="playlist-name">Playlist Name</label>
+        <input type="text" id="playlist-name" placeholder="Enter playlist name">
+    </div>
+    <div class="form-group">
+        <label for="playlist-description">Description</label>
+        <textarea id="playlist-description" placeholder="Enter playlist description"></textarea>
+    </div>
+    <button class="submit-btn" onclick="submitPlaylist()">Create Playlist</button>
+
+    <h2>Delete Playlist</h2>
+    <div class="form-group">
+        <label for="playlist-id">Playlist ID</label>
+        <input type="text" id="playlist-id" placeholder="Enter playlist ID">
+    </div>
+    <button class="delete-btn" onclick="deletePlaylist()">Delete Playlist</button>
+
+    <h2>Show Playlist</h2>
+    <table id="playlistTable">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>USER_ID</th>
+            <th>NAME</th>
+            <th>DESCRIPTION</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Data will be inserted here -->
+        </tbody>
+    </table>
+</div>
 
 </body>
 </html>
