Add a new attribute to song

--- a/src/main/resources/static/singer_index.html
+++ b/src/main/resources/static/singer_index.html
@@ -68,7 +68,7 @@
     <script src="js/singer.js"></script>
 </head>
 
-<body onload="load(true)">
+<body onload="singer_load()">
 <h1>Welcome to Singer Home</h1>
 
 <p id="output"></p> <!-- 用于显示歌手的名字 -->
@@ -84,7 +84,7 @@
     <thead>
     <tr>
         <th>ID</th>
-        <th>Singer ID</th>
+        <th>Singer</th>
         <th>Title</th>
         <th>Star</th>
     </tr>
