login页和register页前端美化，html里面的js部分迁移到js文件

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -23,7 +23,7 @@
         <div class="header-content">
             <h1>Discover the Soundtrack of Your Life</h1>
             <p>Tune into your next favorite song</p>
-            <button class="cta-btn" onclick="location.href='src/main/resources/static/login.html'">Login / Register</button>
+            <button class="cta-btn" onclick="location.href='./login.html'">Login / Register</button>
         </div>
     </header>
 
