--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -41,12 +41,12 @@
         <div class="card-container">
             <!-- Card Examples -->
             <div class="music-card">
-                <img src="./media/啊.JPG" alt="Artist 1">
+                <img src="./media/pic.jpeg.JPG" alt="Artist 1">
                 <h3>Artist 1</h3>
                 <p>Album 1</p>
             </div>
             <div class="music-card">
-                <img src="./media/啊.JPG" alt="Artist 2">
+                <img src="./media/pic.jpeg.JPG" alt="Artist 2">
                 <h3>Artist 2</h3>
                 <p>Album 2</p>
             </div>
