完成user-index页面的歌曲删除功能,完善home页

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -11,12 +11,12 @@
     <header class="main-header">
         <nav class="navbar">
             <div class="logo">MyMusic</div>
-            <ul class="nav-links">
+            <!-- <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#explore">Explore</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
-            </ul>
+            </ul> -->
         </nav>
         <div class="header-content">
             <h1>Discover the Soundtrack of Your Life</h1>
